--- a/main.css
+++ b/main.css
@@ -9,15 +9,23 @@
 }
 #entrenadordiv{
     text-align: left;
-    margin: auto;
+    margin: 10%;
     border-style:solid;
     border-color: black;
     display: grid;
-    width: 50%;
+
 }
 #regiondiv{
-    display: grid;
-    width: 50%;
-    margin: auto;
     text-align: left;
+    margin: 10%;
+    border-style:solid;
+    border-color: black;
+    display: grid;
+
+}
+#pokemondiv{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    border-style:solid;
+    border-color: black;
 }
